--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "test": "echo Not Implemented"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.1.3",
-    "@nate/instrumentation": "^0.0.4",
-    "prom-client": "^13.1.0"
+    "@hapi/hapi": "^20.1.3"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.8",
